--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -2,4 +2,7 @@
   <li>
     <a class="custom-link" routerLink="/timer">Timer</a>
   </li>
+  <li>
+    <a class="custom-link" routerLink="/todo-list">Todo list</a>
+  </li>
 </ul>
