--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -5,4 +5,7 @@
   <li>
     <a class="custom-link" routerLink="/todo-list">Todo list</a>
   </li>
+  <li>
+    <a class="custom-link" routerLink="/shopping-list">Shopping list</a>
+  </li>
 </ul>
