--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -8,4 +8,7 @@
   <li>
     <a class="custom-link" routerLink="/shopping-list">Shopping list</a>
   </li>
+  <li>
+    <a class="custom-link" routerLink="/pokedex">Pokedex</a>
+  </li>
 </ul>
